--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,26 +1,19 @@
 <div class="login-container">
   <img src="./images/tiprlogo.png" alt="Tipr Logo" class="tiprlogo">
-  <section class="user-login">
+  <section class="create-account">
     <ul>
-      <form {{action 'createUser' on='submit'}}>
-        {{paper-text label="Name" value=model.name}}
-        {{paper-text label="E-mail" type="email" value=model.username}}
-        {{paper-text label="Password" type="password" value=model.password}}
-        {{#paper-button classNames="md-primary"}}Sign Up{{/paper-button}}
-      </form>
+      <li>Don't have an account?</li>
+      <li>{{#link-to 'users.create'}}<button>Sign Up for an Account!</button>{{/link-to}}</li>
+
 
 
     </ul>
   </section>
-    <p>Don't have an account?</p>
-  <section class="create-account">
+
+  <section class="user-login">
     <ul>
       <li><button>Login in with Facebook!</button></li>
-      <form {{action 'authenticate' on='submit'}}>
-        {{paper-text label="E-mail" type="email" value=identification}}
-        {{paper-text label="Password" type="password" value=password}}
-        {{#paper-button classNames="md-primary"}}Log In{{/paper-button}}
-      </form>
+      <li>{{login-form}}</li>
     </ul>
   </section>
 </div>
