--- a/app/templates/components/login-form.hbs
+++ b/app/templates/components/login-form.hbs
@@ -1,5 +1,5 @@
 <form {{action 'authenticate' on='submit'}}>
-  {{paper-text label="E-mail" type="email" value=identification}}
+  {{paper-text  label="Username" type="username" value=identification}}
   {{paper-text label="Password" type="password" value=password}}
   {{#paper-button classNames="md-primary"}}Log In{{/paper-button}}
 </form>
