--- a/app/templates/components/users-create.hbs
+++ b/app/templates/components/users-create.hbs
@@ -1,6 +1,15 @@
 <form {{action 'createUser' on='submit'}}>
-  {{paper-text label="Name" value=model.name}}
-  {{paper-text label="E-mail" type="email" value=model.username}}
+  {{paper-text label="Username" type="username" value=model.username}}
+
+  {{paper-text label="E-Mail" value=model.email}}
+
+  {{paper-text label="First Name" value=model.firstName}}
+
+  {{paper-text label="Last Name" value=model.lastName}}
+
   {{paper-text label="Password" type="password" value=model.password}}
+
+  <!-- {{paper-text label="Are you a performer or patron?" value=model.Type}} -->
+
   {{#paper-button classNames="md-primary"}}Sign Up{{/paper-button}}
 </form>
