--- a/app/templates/components/users-current.hbs
+++ b/app/templates/components/users-current.hbs
@@ -1,1 +1,23 @@
-<h1>Hello {{model.username}}</h1>
+<div class="user-container">
+  <img src="./images/googlemap.png" alt="Google Map Example" class="gmap">
+  <h1 class="welcome-message">Hello, {{model.username}}</h1><input type="text" class="search" placeholder="Search for a Performer...">
+
+  <div class="patron-info">
+
+    <ul>
+      <li><a href="#">Interests</a></li>
+      <li><a href="#">Who I've Tipped</a></li>
+      <li><a href="#">Edit Profile</a></li>
+    </ul>
+  </div>
+
+  <div class="favorite-performers">
+    {{performer-list}}
+  </div>
+
+
+  <div>{{#if session.isAuthenticated}}
+    <button  class="logout-button" {{ action 'invalidateSession' }}>Logout</button>
+  {{/if}}
+  </div>
+</div>
