trying to implement google map

--- a/app/templates/components/performer-list.hbs
+++ b/app/templates/components/performer-list.hbs
@@ -1,5 +1,5 @@
 <ul>
-  {{#each performers as |Performer|}}
+  {{#each performer as |Performer|}}
     {{performer-profile}}
     {{else}}
     There are no Performers available!
