--- a/app/templates/components/users-current.hbs
+++ b/app/templates/components/users-current.hbs
@@ -1,5 +1,6 @@
 <div class="user-container">
-  <img src="./images/googlemap.png" alt="Google Map Example" class="gmap">
+  
+{{google-map}}
   <h1 class="welcome-message">Hello, {{model.username}}</h1><input type="text" class="search" placeholder="Search for a Performer...">
 
   <div class="patron-info">
