google maps is working with markers, trying to pull list of users from parse

--- a/app/templates/components/performer-list.hbs
+++ b/app/templates/components/performer-list.hbs
@@ -1,5 +1,5 @@
 <ul>
-  {{#each performer as |Performer|}}
+  {{#each Performer as |performer|}}
     {{performer-profile}}
     {{else}}
     There are no Performers available!
