--- a/app/templates/components/performer-profile.hbs
+++ b/app/templates/components/performer-profile.hbs
@@ -1,9 +1,9 @@
 <div class="performer-info">
   <ul>
-    <li>Username</li>
+    <li>{{username}}</li>
     <li>{{firstName}} {{lastName}}</li>
     <li>{{act}}</li>
-    <li>Location</li>
+
   </ul>
 </div>
 
@@ -13,7 +13,9 @@
   <a href="#"><img src="" alt="Tip $3"></a>
 </div>
 
-<div class="reviews-container"></div>
+<div class="reviews-container">
+  {{performer-review}}
+</div>
 
 <div class="performer-pic">
   <img src="" alt="Performer Picture">
