--- a/app/templates/components/users-create.hbs
+++ b/app/templates/components/users-create.hbs
@@ -9,7 +9,7 @@
 
   {{paper-text label="Password" type="password" value=model.password}}
 
-  <!-- {{paper-text label="Are you a performer or patron?" value=model.Type}} -->
+  {{paper-text label="Are you a performer or patron?" value=model.type}}
 
   {{#paper-button classNames="md-primary"}}Sign Up{{/paper-button}}
 </form>
