linked individual reviews to a list, as well a s indi performers to a list and show views. path from index->login->currentUser->logout->index now works

--- a/app/templates/components/performers-show.hbs
+++ b/app/templates/components/performers-show.hbs
@@ -1,8 +1,8 @@
 <div class="performer-info">
   <ul>
-    <li>{{username}}</li>
-    <li>{{firstName}} {{lastName}}</li>
-    <li>{{act}}</li>
+    <li>Username: {{model.username}}</li>
+    <li>Real Name: {{model.firstName}} {{model.lastName}}</li>
+    <li>What kind of Performance? {{model.act}}</li>
 
   </ul>
 </div>
@@ -14,7 +14,7 @@
 </div>
 
 <div class="reviews-container">
-  {{performer-review}}
+  {{performer-reviews}}
 </div>
 
 <div class="performer-pic">
