--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,9 +7,13 @@
    color: $lightblue;
  }
 
+ * li {
+   list-style: none;
+ }
+
 .map-canvas {
-  height: 500px;
-  width: 500px;
+  height: 300px;
+  width: 300px;
   margin-right: 20px;
 }
 
@@ -34,7 +38,9 @@
 
 .patron-info li {
   list-style: none;
-  margin-left: 30px;
+  // margin-left: 30px;
+  display: inline-block;
+  color: white;
 }
 
 .user-container {
@@ -69,75 +75,74 @@ paper-text {
   color: white;
 }
 
-// Star Rating Styles
-form .stars {
-  background: url("stars.png") repeat-x 0 0;
-  width: 150px;
-  margin: 0 auto;
+.performer-thumbnail {
+  border: 1px solid $lightblue;
+  border-radius: 5px;
+  height: auto;
+  width: auto;
 }
 
-form .stars input[type="radio"] {
-  position: absolute;
-  opacity: 0;
-  filter: alpha(opacity=0);
+.reviews-thumbnail {
+  border: 1px solid $lightblue;
+  border-radius: 5px;
+  height: auto;
+  width: auto;
 }
-form .stars input[type="radio"].star-5:checked ~ span {
-  width: 100%;
+
+// Star Rating Styles
+
+.rating {
+    float:left;
 }
-form .stars input[type="radio"].star-4:checked ~ span {
-  width: 80%;
+
+/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t
+   follow these rules. Every browser that supports :checked also supports :not(), so
+   it doesn’t make the test unnecessarily selective */
+.rating:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+    clip:rect(0,0,0,0);
 }
-form .stars input[type="radio"].star-3:checked ~ span {
-  width: 60%;
+
+.rating:not(:checked) > label {
+    float:right;
+    width:1em;
+    padding:0 .1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:200%;
+    line-height:1.2;
+    color:#ddd;
+    text-shadow:1px 1px #bbb, 2px 2px #666, .1em .1em .2em rgba(0,0,0,.5);
 }
-form .stars input[type="radio"].star-2:checked ~ span {
-  width: 40%;
+
+.rating:not(:checked) > label:before {
+    content: '★ ';
 }
-form .stars input[type="radio"].star-1:checked ~ span {
-  width: 20%;
+
+.rating > input:checked ~ label {
+    color: #f70;
+    text-shadow:1px 1px #c60, 2px 2px #940, .1em .1em .2em rgba(0,0,0,.5);
 }
-form .stars label {
-  display: block;
-  width: 30px;
-  height: 30px;
-  margin: 0!important;
-  padding: 0!important;
-  text-indent: -999em;
-  float: left;
-  position: relative;
-  z-index: 10;
-  background: transparent!important;
-  cursor: pointer;
+
+.rating:not(:checked) > label:hover,
+.rating:not(:checked) > label:hover ~ label {
+    color: gold;
+    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
 }
-form .stars label:hover ~ span {
-  background-position: 0 -30px;
+
+.rating > input:checked + label:hover,
+.rating > input:checked + label:hover ~ label,
+.rating > input:checked ~ label:hover,
+.rating > input:checked ~ label:hover ~ label,
+.rating > label:hover ~ input:checked ~ label {
+    color: #ea0;
+    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
 }
-form .stars label.star-5:hover ~ span {
-  width: 100% !important;
-}
-form .stars label.star-4:hover ~ span {
-  width: 80% !important;
-}
-form .stars label.star-3:hover ~ span {
-  width: 60% !important;
-}
-form .stars label.star-2:hover ~ span {
-  width: 40% !important;
-}
-form .stars label.star-1:hover ~ span {
-  width: 20% !important;
-}
-form .stars span {
-  display: block;
-  width: 0;
-  position: relative;
-  top: 0;
-  left: 0;
-  height: 30px;
-  background: url("stars.png") repeat-x 0 -60px;
-  -webkit-transition: -webkit-width 0.5s;
-  -moz-transition: -moz-width 0.5s;
-  -ms-transition: -ms-width 0.5s;
-  -o-transition: -o-width 0.5s;
-  transition: width 0.5s;
+
+.rating > label:active {
+    position:relative;
+    top:2px;
+    left:2px;
 }
