--- a/app/templates/components/reviews-create.hbs
+++ b/app/templates/components/reviews-create.hbs
@@ -1,22 +1,16 @@
 <form {{action 'saveReview' on='submit'}}>
   {{paper-text label="Title of your Review" value=model.title}}
   {{paper-text textarea=true label="Write your review here..." value=model.body}}
+  <fieldset class="rating">
+    <legend>Rate this Peformer!:</legend>
+    <input type="radio" id="star5" name="rating" value="5"><label for="star5" title="Rocks!">5 stars</label>
+    <input type="radio" id="star4" name="rating" value="4"><label for="star4" title="Pretty good">4 stars</label>
+    <input type="radio" id="star3" name="rating" value="3"><label for="star3" title="Meh">3 stars</label>
+    <input type="radio" id="star2" name="rating" value="2"><label for="star2" title="Kinda bad">2 stars</label>
+    <input type="radio" id="star1" name="rating" value="1"><label for="star1" title="Sucks big time">1 star</label>
+</fieldset>
 
-  <form id="ratingsForm">
-      <div class="stars">
-          <input type="radio" name="star" class="star-1" id="star-1" />
-          <label class="star-1" for="star-1">1</label>
-          <input type="radio" name="star" class="star-2" id="star-2" />
-          <label class="star-2" for="star-2">2</label>
-          <input type="radio" name="star" class="star-3" id="star-3" />
-          <label class="star-3" for="star-3">3</label>
-          <input type="radio" name="star" class="star-4" id="star-4" />
-          <label class="star-4" for="star-4">4</label>
-          <input type="radio" name="star" class="star-5" id="star-5" />
-          <label class="star-5" for="star-5">5</label>
-          <span></span>
-      </div>
-  </form>
+
   {{#paper-button classNames="md-primary"}}Submit Review{{/paper-button}}
 
 
