list of performers dynamically showing on user page and reviews dynamically showing on performer pages

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -89,6 +89,25 @@ paper-text {
   width: auto;
 }
 
+.qrcode{
+  border: 2px solid $darkblue;
+  border-radius: 3px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 // Star Rating Styles
 
 .rating {
