--- a/app/templates/components/reviews-show.hbs
+++ b/app/templates/components/reviews-show.hbs
@@ -1,7 +1,6 @@
 <div class="review">
-  <h3>
-      Title: {{model.title}}
-  </h3>
+  <h3>Title: {{model.title}}</h3>
+  <h5>Reviewer: {{model.reviewer}}</h5>
 
   <li>Rating: {{model.stars}}</li>
   <li>Body: {{model.body}}</li>
