--- a/app/templates/components/performers-index.hbs
+++ b/app/templates/components/performers-index.hbs
@@ -1,16 +1,16 @@
-
 {{#each model as |performer|}}
-<div class="performer-thumbnail">
-  <li>
-    <h3>
-      {{#link-to 'performers.show' performer}}
-        Username: {{performer.username}}
-      {{/link-to}}
-    </h3>
-  </li>
+<div>
+    <li>
+      <img src="" alt="Profile Picture">
+
+        {{#link-to 'performers.show' performer}}
+          Username: {{performer.username}}
+        {{/link-to}}
+
+    </li>
+
   <li>Rating: {{performer.stars}}</li>
   <li>Act: {{performer.act}}</li>
 </div>
 
 {{/each}}
-{{output}}
