index styles almost complete, changing signup page

--- a/app/templates/components/performers-show.hbs
+++ b/app/templates/components/performers-show.hbs
@@ -5,11 +5,7 @@
   </ul>
 </div>
 
-<div class="tip-options">
-  <a href="#"><img src="./images/tip1.png" alt="Tip $1"></a>
-  <a href="#"><img src=".././images/tip2.png" alt="Tip $2"></a>
-  <a href="#"><img src="./images/tip3.png" alt="Tip $3"></a>
-</div>
+{{stripe-payment}}
 
 
   <div>
