--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,9 @@
- @import 'ember-paper';
- @import 'palette';
+@import 'ember-paper';
+@import 'palette';
+@import 'stars';
+@import 'login-form';
 @import 'bootstrap';
+@import 'custom-navbar';
  html,
  body {
    background-color: $darkblue;
@@ -11,9 +14,20 @@
    list-style: none;
  }
 
+ .main-page-bg {
+   background-image: url('.././images/main-st-bg.jpg');
+   height: 580px;
+   width: 100%;
+ }
+
+ .main-bg {
+   height: 580px;
+   width: 1340px;
+ }
+
 .map-canvas {
   height: 300px;
-  width: 300px;
+  width: 100%;
   margin-right: 20px;
   float: right;
   border-radius: 5px;
@@ -99,76 +113,4 @@ paper-text {
 .qrcode{
   border: 2px solid $darkblue;
   border-radius: 3px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-// Star Rating Styles
-
-.rating {
-    float:left;
-}
-
-/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t
-   follow these rules. Every browser that supports :checked also supports :not(), so
-   it doesn’t make the test unnecessarily selective */
-.rating:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
-    clip:rect(0,0,0,0);
-}
-
-.rating:not(:checked) > label {
-    float:right;
-    width:1em;
-    padding:0 .1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:200%;
-    line-height:1.2;
-    color:#ddd;
-    text-shadow:1px 1px #bbb, 2px 2px #666, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-.rating:not(:checked) > label:before {
-    content: '★ ';
-}
-
-.rating > input:checked ~ label {
-    color: #f70;
-    text-shadow:1px 1px #c60, 2px 2px #940, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-.rating:not(:checked) > label:hover,
-.rating:not(:checked) > label:hover ~ label {
-    color: gold;
-    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-.rating > input:checked + label:hover,
-.rating > input:checked + label:hover ~ label,
-.rating > input:checked ~ label:hover,
-.rating > input:checked ~ label:hover ~ label,
-.rating > label:hover ~ input:checked ~ label {
-    color: #ea0;
-    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-.rating > label:active {
-    position:relative;
-    top:2px;
-    left:2px;
 }
