--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,48 @@
+<div class="navbar navbar-inverse navbar-static-top navbar-custom" style="margin-bottom: 0px;">
+  <div class="container">
+      <a href=""><div class="navbar-brand">Tipr</div></a>
+      <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      </button>
+      <div class="collapse navbar-collapse navHeaderCollapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Stuff</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Instagram</a></li>
+              <li><a href="#">Twitter</a></li>
+            </ul>
+          </li>
+          <li><a href="#contact" data-toggle="modal">Contact Us</a></li>
+
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="modal fade" id="contact" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4>Contact Tipr Support</h4>
+        </div>
+        <div class="modal-body">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero quasi accusantium maxime facere, iure rerum praesentium omnis ex sit, nihil eum temporibus, iusto ipsam illo. Sed facilis sunt libero, deleniti.
+        </div>
+        <div class="modal-footer">
+          <a href="" class="btn btn-default" data-dismiss="modal">Cancel</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 {{outlet}}
