--- a/app/templates/components/login-form.hbs
+++ b/app/templates/components/login-form.hbs
@@ -1,5 +1,27 @@
-<form {{action 'authenticate' on='submit'}}>
+<!-- <form {{action 'authenticate' on='submit'}}>
   {{paper-text  label="Username" type="username" value=identification}}
   {{paper-text label="Password" type="password" value=password}}
   {{#paper-button classNames="md-primary"}}Log In{{/paper-button}}
+</form> -->
+
+<form>
+  <fieldset class="account-info">
+    <label>
+    {{input type="username" name="Username" placeholder="Username" value=identification required=true}}
+    </label>
+    <label>
+    {{input type="password" name="Password" placeholder="Password" value=password required=true}}
+    </label>
+  </fieldset>
+
+  <fieldset class="account-action">
+    <input class='btn' type="submit" {{action 'authenticate'}} value="Login">
+    <input type="checkbox" name="remember" class="remember">Remember Me
+    <hr>
+    <center>
+      <p><small>Don't have an account?</small></p>
+      {{#link-to 'users.create'}}<input class="btn" value="Sign Up!">{{/link-to}}
+    </center>
+  </fieldset>
+
 </form>
