--- a/app/templates/components/stripe-payment.hbs
+++ b/app/templates/components/stripe-payment.hbs
@@ -1,1 +1,5 @@
-{{yield}}
+<div class="tip-options">
+  <img src="./images/tip1.png" alt="Tip $1" id="tip-one">
+  <img src="./images/tip2.png" alt="Tip $2" id="tip-two">
+  <img src="./images/tip3.png" alt="Tip $3" id="tip-three">
+</div>
