--- a/app/templates/components/login-form.hbs
+++ b/app/templates/components/login-form.hbs
@@ -4,7 +4,7 @@
   {{#paper-button classNames="md-primary"}}Log In{{/paper-button}}
 </form> -->
 
-<form>
+<form class='login'>
   <fieldset class="account-info">
     <label>
     {{input type="username" name="Username" placeholder="Username" value=identification required=true}}
