--- a/app/styles/login-form.scss
+++ b/app/styles/login-form.scss
@@ -3,15 +3,30 @@
 *:after {
    box-sizing: border-box;
 }
-form {
+form .login{
   border: 1px solid #c6c7cc;
   border-radius: 5px;
   font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
   overflow: hidden;
   width: 240px;
-  margin-top: 30px;
+  margin-top: 100px;
   margin-right: 20px;
 }
+
+.form-horizontal{
+  border: 1px solid #c6c7cc;
+  border-radius: 5px;
+  font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  overflow: hidden;
+  width: 80%;
+  padding-top: 30px;
+  padding-bottom: 10px;
+  margin-top: 40px;
+  margin-right: 20px;
+  background: rgba(255, 255, 255, 0.10);
+}
+
+
 fieldset {
   border: 0;
   margin: 0;
