--- a/app/styles/palette.scss
+++ b/app/styles/palette.scss
@@ -5,3 +5,6 @@ $blue: #347fc4; //rgba(52, 127, 196, 100)
 $lightblue: #0ad3ff; //rgba(10, 211, 255, 100)
 $lightgreen: #71aaa1; //rgba(113, 170, 161, 100)
 $green: #1d9156; //rgba(29, 145, 86, 100)
+$lightgreen: #0BD643; //rgba(11, 214, 67, 1)
+$darkgreen: #076421;
+$offblack: #0D0D0D;
