--- a/app/templates/components/performers-show.hbs
+++ b/app/templates/components/performers-show.hbs
@@ -1,8 +1,5 @@
 <div class="performer-pic">
-  <ul>
-    <li><img src="{{model.profilePic.url}}" alt="Profile Picture" class="profile-pic"></li>
-    <!-- <li><img src="{{model.qrcode.url}}" alt="QR Code" class="qrcode"></li> -->
-  </ul>
+  <img src="{{model.profilelarge.url}}" alt="Profile Picture">
 </div>
 
 <div>
