added small profile pictures to performers index

--- a/app/templates/components/performers-index.hbs
+++ b/app/templates/components/performers-index.hbs
@@ -2,7 +2,7 @@
 <div class="performer-thumbnail">
     <li>
         {{#link-to 'performers.show' performer}}
-        <img src="{{model.profilesmall.url}}" alt="Profile Picture">
+        <img src="{{performer.profilesmall.url}}" alt="Profile Picture">
           Username: {{performer.username}}
         {{/link-to}}
     </li>
