--- a/app/templates/components/users-current.hbs
+++ b/app/templates/components/users-current.hbs
@@ -9,9 +9,9 @@
     <div class="col-md-6">
       <h2 class="welcome-message">Hello {{session.currentUser.username}}, Welcome to Tipr!</h2>
       <ul>
-        <li><a href="#">Interests</a></li>
+        <!-- <li><a href="#">Interests</a></li>
         <li><a href="#">Who I've Tipped</a></li>
-        <li><a href="#">Edit Profile</a></li>
+        <li><a href="#">Edit Profile</a></li> -->
       </ul>
     </div>
     <!-- <span class="col-md-6">{{google-map}}</span> -->
