--- a/app/styles/palette.scss
+++ b/app/styles/palette.scss
@@ -8,3 +8,7 @@ $green: #1d9156; //rgba(29, 145, 86, 100)
 $lightgreen: #0BD643; //rgba(11, 214, 67, 1)
 $darkgreen: #076421;
 $offblack: #0D0D0D;
+$darkgrey: #212121;
+$medgrey: #303030;
+$lightgrey: #424242;
+$offwhite: #F2F2F2;
