--- a/app/templates/components/performers-show-pay.hbs
+++ b/app/templates/components/performers-show-pay.hbs
@@ -1,6 +1,6 @@
 <div>
-  <form class="stripe-form" {{action 'checkout' on='submit'}}>
-    <button class="pay-with-card pure-button pure-button-primary">connect payment</button>
+  <form class='tip-form' {{action 'checkout' on='submit'}}>
+    <button class="tip-btn">Tip $1</button>
   </form>
 </div>
 
