--- a/app/styles/custom-navbar.scss
+++ b/app/styles/custom-navbar.scss
@@ -1,47 +1,47 @@
 .navbar-custom {
-  background-color: #303030;
-  border-color: #1f1f1f;
-  background-image: -webkit-gradient(linear, left 0%, left 100%, from(#4a4a4a), to(#303030));
-  background-image: -webkit-linear-gradient(top, #4a4a4a, 0%, #303030, 100%);
-  background-image: -moz-linear-gradient(top, #4a4a4a 0%, #303030 100%);
-  background-image: linear-gradient(to bottom, #4a4a4a 0%, #303030 100%);
+  background-color: #212121;
+  border-color: #101010;
+  background-image: -webkit-gradient(linear, left 0%, left 100%, from(#3b3b3b), to(#212121));
+  background-image: -webkit-linear-gradient(top, #3b3b3b, 0%, #212121, 100%);
+  background-image: -moz-linear-gradient(top, #3b3b3b 0%, #212121 100%);
+  background-image: linear-gradient(to bottom, #3b3b3b 0%, #212121 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4a4a4a', endColorstr='#ff303030', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3b3b3b', endColorstr='#ff212121', GradientType=0);
 }
 .navbar-custom .navbar-brand {
-  color: #c0c0c0;
+  color: #ffffff;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus {
-  color: #a7a7a7;
+  color: #e6e6e6;
   background-color: transparent;
 }
 .navbar-custom .navbar-text {
-  color: #c0c0c0;
+  color: #ffffff;
 }
 .navbar-custom .navbar-nav > li:last-child > a {
-  border-right: 1px solid #1f1f1f;
+  border-right: 1px solid #101010;
 }
 .navbar-custom .navbar-nav > li > a {
-  color: #c0c0c0;
-  border-left: 1px solid #1f1f1f;
+  color: #ffffff;
+  border-left: 1px solid #101010;
 }
 .navbar-custom .navbar-nav > li > a:hover,
 .navbar-custom .navbar-nav > li > a:focus {
-  color: #ffffff;
+  color: #212121;
   background-color: transparent;
 }
 .navbar-custom .navbar-nav > .active > a,
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
-  color: #ffffff;
-  background-color: #1f1f1f;
-  background-image: -webkit-gradient(linear, left 0%, left 100%, from(#1f1f1f), to(#393939));
-  background-image: -webkit-linear-gradient(top, #1f1f1f, 0%, #393939, 100%);
-  background-image: -moz-linear-gradient(top, #1f1f1f 0%, #393939 100%);
-  background-image: linear-gradient(to bottom, #1f1f1f 0%, #393939 100%);
+  color: #F2F2F2;
+  background-color: #101010;
+  background-image: -webkit-gradient(linear, left 0%, left 100%, from(#101010), to(#2a2a2a));
+  background-image: -webkit-linear-gradient(top, #101010, 0%, #2a2a2a, 100%);
+  background-image: -moz-linear-gradient(top, #101010 0%, #2a2a2a 100%);
+  background-image: linear-gradient(to bottom, #101010 0%, #2a2a2a 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1f1f1f', endColorstr='#ff393939', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff101010', endColorstr='#ff2a2a2a', GradientType=0);
 }
 .navbar-custom .navbar-nav > .disabled > a,
 .navbar-custom .navbar-nav > .disabled > a:hover,
@@ -61,43 +61,43 @@
 }
 .navbar-custom .navbar-collapse,
 .navbar-custom .navbar-form {
-  border-color: #1e1e1e;
+  border-color: #0f0f0f;
 }
 .navbar-custom .navbar-nav > .dropdown > a:hover .caret,
 .navbar-custom .navbar-nav > .dropdown > a:focus .caret {
-  border-top-color: #ffffff;
-  border-bottom-color: #ffffff;
+  border-top-color: #303030;
+  border-bottom-color: #303030;
 }
 .navbar-custom .navbar-nav > .open > a,
 .navbar-custom .navbar-nav > .open > a:hover,
 .navbar-custom .navbar-nav > .open > a:focus {
-  background-color: #1f1f1f;
-  color: #ffffff;
+  background-color: #101010;
+  color: #303030;
 }
 .navbar-custom .navbar-nav > .open > a .caret,
 .navbar-custom .navbar-nav > .open > a:hover .caret,
 .navbar-custom .navbar-nav > .open > a:focus .caret {
+  border-top-color: #303030;
+  border-bottom-color: #303030;
+}
+.navbar-custom .navbar-nav > .dropdown > a .caret {
   border-top-color: #ffffff;
   border-bottom-color: #ffffff;
 }
-.navbar-custom .navbar-nav > .dropdown > a .caret {
-  border-top-color: #c0c0c0;
-  border-bottom-color: #c0c0c0;
-}
 @media (max-width: 767) {
   .navbar-custom .navbar-nav .open .dropdown-menu > li > a {
-    color: #c0c0c0;
+    color: #ffffff;
   }
   .navbar-custom .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-custom .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #ffffff;
+    color: #303030;
     background-color: transparent;
   }
   .navbar-custom .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #ffffff;
-    background-color: #1f1f1f;
+    color: #303030;
+    background-color: #424242;
   }
   .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -107,12 +107,18 @@
   }
 }
 .navbar-custom .navbar-link {
-  color: #c0c0c0;
-}
-.navbar-custom .navbar-link:hover {
   color: #ffffff;
 }
+.navbar-custom .navbar-link:hover {
+  color: #303030;
+}
 
-.navbar {
-  padding-bottom: 0;
+.modal-header,
+.modal-body {
+  color: $darkgrey;
+}
+
+.navbar-brand {
+  margin: 0;
+  padding: 0;
 }
