--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,6 +7,7 @@
 @import 'buttons';
 @import 'performer-styles';
 @import 'reviews-styles';
+@import './bower_components/fontawesome/scss/font-awesome';
 html,
 body {
   background-color: $medgrey;
