--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -14,9 +14,9 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Twitter</a></li>
+              <li><a href="#"><i class="fa fa-facebook-square"></i> Facebook</a></li>
+              <li><a href="#"><i class="fa fa-instagram"></i> Instagram</a></li>
+              <li><a href="#"><i class="fa fa-twitter-square"></i> Twitter</a></li>
             </ul>
           </li>
           <li><a href="#contact" data-toggle="modal">Contact Us</a></li>
