--- a/app/templates/components/reviews-create.hbs
+++ b/app/templates/components/reviews-create.hbs
@@ -1,18 +1,35 @@
-<form {{action 'saveReview' on='submit'}}>
-  {{paper-text label="Title of your Review" value=model.title}}
-  {{paper-text textarea=true label="Write your review here..." value=model.body}}
-  <fieldset class="rating">
-    <legend>Rate this Peformer!:</legend>
-    <input type="radio" id="star5" name="rating" value="5"><label for="star5" title="Rocks!">5 stars</label>
-    <input type="radio" id="star4" name="rating" value="4"><label for="star4" title="Pretty good">4 stars</label>
-    <input type="radio" id="star3" name="rating" value="3"><label for="star3" title="Meh">3 stars</label>
-    <input type="radio" id="star2" name="rating" value="2"><label for="star2" title="Kinda bad">2 stars</label>
-    <input type="radio" id="star1" name="rating" value="1"><label for="star1" title="Sucks big time">1 star</label>
-</fieldset>
+<div class="container">
+  <div class="col-md-12">
+    <center>
+    <form class="review-submit">
+
+        <label>
+          {{input type="title" name="Title" class="review-title" placeholder="Title of your review" value=model.title}}
+        </label>
+        <label>
+          {{textarea textarea=true class="review-body" placeholder="Write your review here..." value=model.body}}
+        </label>
+
+        <fieldset class="rating">
+          <!-- <legend>Rate this Peformer!:</legend> -->
+          <input type="radio" id="star5" name="rating" value="5">
+          <label for="star5" title="Rocks!">5 stars</label>
+          <input type="radio" id="star4" name="rating" value="4">
+          <label for="star4" title="Pretty good">4 stars</label>
+          <input type="radio" id="star3" name="rating" value="3">
+          <label for="star3" title="Meh">3 stars</label>
+          <input type="radio" id="star2" name="rating" value="2">
+          <label for="star2" title="Kinda bad">2 stars</label>
+          <input type="radio" id="star1" name="rating" value="1">
+          <label for="star1" title="Sucks big time">1 star</label>
+        </fieldset>
 
 
-  {{#paper-button classNames="md-primary"}}Submit Review{{/paper-button}}
+        <input class='btn submit-review-btn' type="submit" {{action 'saveReview'}} value="Submit Review!">
 
+    </form>
+  </center>
 
-</form>
+  </div>
+</div>
 {{yield}}
