--- a/app/templates/components/reviews-index.hbs
+++ b/app/templates/components/reviews-index.hbs
@@ -1,22 +1,24 @@
-<div class="container-fluid">
+<div class="container">
   {{#each model as |review|}}
-  {{log review}}
-  <div class="reviews-thumbnail">
-    <li>
-      <h3>
-        {{#link-to 'reviews.show' review}}
-          Title: {{review.title}}
-        {{/link-to}}
-        {{confirm-button title="Delete" action="deleteReview" param=review}}
-      </h3>
-    </li>
-    <li>Rating: {{review.stars}}</li>
-    <li>Body: {{review.body}}</li>
-
-  </div>
+    {{log review}}
+    <div class="reviews-thumbnail">
+      <center>
+        <li class="row">
+          <h3 class="col-md-11">
+            {{#link-to 'reviews.show' review}}
+              {{review.title}}
+            {{/link-to}}
+          </h3>
+          <span class="col-md-1 delete-btn-main">{{confirm-button title="Delete" action="deleteReview" param=review}}</span>
+        </li>
+        <li>{{review.stars}} Stars!</li>
+        <li>{{review.body}}</li>
+      </center>
+    </div>
   {{/each}}
 
-  {{#link-to 'reviews.create'}}<button class="create-review-button">Create a new review!</button>{{/link-to}}
+  {{#link-to 'reviews.create'}}
+    <button class="create-review-btn">Write a review!</button>
+  {{/link-to}}
 
-  {{#link-to 'users.current'}}<button>Home</button>{{/link-to}}
 </div>
