fixed file path for main logo

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <div class="navbar navbar-inverse navbar-static-top navbar-custom" style="margin-bottom: 0px;">
   <div class="container">
-      {{#link-to 'users.current'}}<div class="navbar-brand"><img src='.././images/tiprlogo.svg'></div>{{/link-to}}
+      {{#link-to 'users.current'}}<div class="navbar-brand"><img src='images/tiprlogo.svg'></div>{{/link-to}}
       <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
